--- a/index.html
+++ b/index.html
@@ -16,9 +16,41 @@
           <a class="navbar-brand" href="#"><img src="assets/img/logo-white.png" alt="Cuppon" class="cupon"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
-          </button
+            </button
         </div>
-      </nav>
+    </nav>
+
+  main class="container>
+    <section class="row">
+      <div class="card" style="width: 18rem;">
+        <img src="assets/img/cupon-1.jpg" class="card-img-top" alt="Plumon">
+        <div class="card-body">
+          <h5 class="card-title">"Plumon Coral Fleece estampado en modelo y tamaño a elección"</h5>
+          <p class="card-text h6 fw-light">Plumones Manolino</p>
+          <p class="fw-light"
+            <i class="fas fa map-marker-alt fa-xs" aria aria-hidden="true"></i>
+            " 9191 Avenida Vitacura, Chile"
+          </p>
+          <hr>
+          <ul class="list-group list-group-flush text-right>
+            <li class="list-group-item ms-auto fw-light gris py-0 pe-1">
+              "$45.990"
+              <span class="h5 fw-bold bg-green ms-3">$22.990</span>
+            </li>
+           </ul>
+        </div>
+      </div>   
+    </div>
+    
+      <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div>
+      </div>
+
+
+
+
+
+  </section>
 
 
 </body>
